--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@
     <string name="Komplikasi">Komplikasi</string>
     <string name="m.fisik">Manifestasi Klinis</string>
     <string name="tatalaksana">Tatalaksana</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
